--- a/p3-secret/p3.md
+++ b/p3-secret/p3.md
@@ -1731,13 +1731,13 @@ In more detail:
 
 // PIC TODO: 6Pack of Digital Democracy
 
-Another thought: while "sticks" (threat of fines, punishment) are necessary, I think it's neglected how we can use "carrots" (market incentives) to redirect industry. As Audrey Tang — Digital Minister of Taiwan, and co-author of 6Pack.care — once explained it: if you successfully advocated for securing cockpit doors _before_ 9/11, or better biosecurity before Covid-19, your reward would be... "nothing happens". Nobody cares about the bomb that didn't go off. TODO So, if you want your AI Alignment & Governance ideas to be _actually implemented in real life, not just in academic papers_, you need them to "pay dividends" in the short term.
+Another thought: while "sticks" (fines, penalties) are necessary, I think it's neglected how we can use "carrots" (market incentives) to redirect industry. As Audrey Tang — Digital Minister of Taiwan, and co-author of 6Pack.care — once explained it: if you successfully advocated for securing cockpit doors _before_ 9/11, or better biosecurity before Covid-19, your reward would be... "nothing happens". Nobody cares about the bomb that didn't go off. TODO So, if you want your AI Alignment & Governance ideas to be _actually implemented in real life, not just in academic papers_, you need them to "pay dividends" in the short term.
 
 Many of the AI Safety solutions listed above can have, or _already have had_, profitable market spinoffs. (examples: [^safety-market])
 
 But in the next final two sections, "Alternatives to AGI" and "Cyborgism", we'll see ideas that empower regular fleshy humans (rather than a few companies/governments), _and_ are short-term market-incentive-compatible, _and_ long-term Good.
 
-[^safety-market]: TODO: RLHF
+[^safety-market]: TODO: RLHF, Elicit. misc
 
 [: bonus - what about the economics of AI? basic income, human subsidies, reskilling?](#EconomicsAI)
 
@@ -1769,8 +1769,8 @@ Actually, it's worse than that — even if you're in an AI-proof job, AI can sti
 
 But in the past, hasn't automation always been good on average, creating more jobs than it destroys?
 
-1. Well, re: "average", the average person has one testicle. Point is: "average" ignores the _variance_. If the bottom 99% of people lose $10,000, so that the top 1% gain $1,000,000, that's a win "on average".
-2. This time really is different. In the past, automation "only" took out one small sector at a time (textile workers, horse drivers, elevator operators, etc). But _this_ time, with deep learning, AIs can automate a huge percentage of the human economy in one go: self-driving cars vs truckers & taxicabs, LLMs vs programmers & writers, diffusion models vs artists. (And if you're in an AI-safe job, like plumber? Good for you! But your wages will drop from _everyone else_ scrambling to re-train to AI-safe jobs, like plumber.)
+1. Well, re: "average", the average person has one testicle. Point is: **"average" ignores the _variance_.** If the bottom 99% of people lose $10,000, so that the top 1% gain $1,000,000, that's a win "on average". I exaggerate, but [since Covid, we may already be in a K-shaped economy](https://www.marketplace.org/story/2025/11/11/kshaped-economy-mirrored-by-covids-uneven-recovery): one line goes up for the rich, one line goes down for the rest of us. (And even if you're a utilitarian who only cares about total utility, remember utility is logarithmic to wealth. So if Alice gains $10,000 & Bob loses $10,000, Alice gains _less_ utility than Bob loses: total wealth is constant, but total _utility_ drops. You wouldn't be _neutral_ about a coin flip where you gain/lose $10,000, would you?)
+2. **This time really is different.** In the past, automation "only" took out one small sector at a time (textile workers, horse drivers, elevator operators, etc). But _this_ time, with deep learning, AIs can automate a huge percentage of the human economy in one go: self-driving cars vs truckers & taxicabs, LLMs vs programmers & writers, diffusion models vs artists. (And if you're in an AI-safe job, like plumber? Good for you! But your wages will drop from _everyone else_ scrambling to re-train to AI-safe jobs, like plumber.)
 
 (It's hard to tell how badly AI is affecting the job market _right now_. The hiring rates for artists, writers, and even newly-graduated programmers — once thought of a golden ticket to a 6-figure salary! — has been dropping since generative AI came out in late 2022. But that _also_ coincides with a post-Covid recession, so it's hard to tell how much of the unemployment is due to AI specifically, vs the sucky economy in general.)
 
@@ -1778,29 +1778,31 @@ But in the past, hasn't automation always been good on average, creating more jo
 
 A popular proposal is a **Universal Basic Income (UBI)**, funded by taxing AI. After all, modern AI was trained on data created by the public's hard work — shouldn't part of the gains go back to the public, a "citizen's dividend, similar to [Alaska's sovereign wealth fund](https://en.wikipedia.org/wiki/Alaska_Permanent_Fund), where profit from their natural resources goes back to their citizens?
 
-A lot of skepticism about UBI comes from it promoted by tech CEOs [like Sam Altman](https://moores.samaltman.com/), who are, uh, ["not completely candid"](https://garymarcus.substack.com/p/sam-altmans-pants-are-totally-on). That said, just because someone's promoting an idea cynically doesn't mean it's _not_ a good idea. [To quote GLaDOS](https://p1.portal2sounds.com/57): "Killing you, and giving you good advice, aren't mutually exclusive."
+A lot of skepticism about UBI comes from it promoted by tech CEOs [like Sam Altman](https://moores.samaltman.com/), who are, uh, ["not completely candid"](https://garymarcus.substack.com/p/sam-altmans-pants-are-totally-on). That said, just because someone's promoting an idea cynically to quell dissent, doesn't mean it's _not_ a good idea. Tech CEOs could be lying about promising UBI, because UBI _would_ be great. [To quote GLaDOS](https://p1.portal2sounds.com/57): "Killing you, and giving you good advice, aren't mutually exclusive."
 
 Another common critique of UBI is that people don't just need money, they need _meaning_, and people get meaning from their jobs. (["Love and Work"](https://figuringoutfulfillment.wordpress.com/2012/01/23/lieben-und-arbeiten/), Freud supposedly said.) Now: writing as someone who finds meaning in her job: _f\@\#k off_. I keep hearing the "work is good coz it gives meaning" line from think tanks & pundits & the Credentialed Class, and, yeah, easy for _you_ to say, you have a _nice_ job. _I_ have a nice job. We're not working the night shift at 7/11, or slowly getting lung cancer from the industrial fumes. _But, oh, if we're all living off UBI, how will we get meaning if we can't sell our labour on a market?_ Oh I dunno, how about spending life with family? friends? lovers? And if you love your job making art or writing essays, you know you can just _keep doing that_ even with UBI, right? Sorry I'm pissy about this, I just do not respect Status Quo Stockholm Syndrome.
 
-However, there _is_ one strong critique of UBI that I acknowledge. Despite all the exciting pilot programs in developing nations, **UBI in _developed_ nations like America… mostly doesn't help.** (see [the OpenResearch study by Vivalt et al 2025](https://evavivalt.com/wp-content/uploads/Vivalt-et-al.-ORUS-employment.pdf), lit review by [Kelsey Piper](https://www.theargumentmag.com/p/giving-people-money-helped-less-than))
+However, there _is_ one strong critique of UBI that I acknowledge. Despite all the exciting pilot programs in developing nations, **UBI in _developed_ nations like America mostly doesn't help.** (see [the OpenResearch study by Vivalt et al 2025](https://evavivalt.com/wp-content/uploads/Vivalt-et-al.-ORUS-employment.pdf), lit review by [Kelsey Piper](https://www.theargumentmag.com/p/giving-people-money-helped-less-than))
 
 For example, [see the BIG:LEAP report](https://basicincome.org/wp-content/uploads/2024/07/CGIRLABIGLEAPFinalReport.pdf), a UBI experiment in Los Angeles. See Tables 4, 5, and 9: receipients' financial well-being, food security, and perceived stress were all _barely_ any better than controls, after _18 months of getting $1000/month_.
 
-And it's not because "well, Americans are already relatively rich, so extra cash doesn't do much" – one RCT gave _$1000/month to homeless people in Denver_, and after ten months, they weren't any more likely to have stable housing than the controls getting $50/month. ([See Figures 1 & 2 of their research page](https://www.denverbasicincomeproject.org/research), which tries to lie-via-misleading-truth, and play this off as a success?!?!) So if UBI doesn't even help _literally homeless people_, how would it help people who lost their jobs to AI?
+And it's not because "well, Americans are already relatively rich compared to Africans, so extra cash doesn't do much" – one RCT gave _$1000/month to homeless people in Denver_, and after ten months, they weren't any more likely to have stable housing than the controls getting $50/month. ([See Figures 1 & 2 of their research page](https://www.denverbasicincomeproject.org/research), which tries to lie-via-misleading-truth, and play this off as a success?!?!)
 
-And in these major UBI trials, recipients worked a bit less. Which would be good if the extra leisure time translated to better mental health, or better child health. It didn't.
+So if UBI doesn't even help _literally homeless people_, how would it help people who lost their jobs to AI?
 
-(To be fair, UBI in America at least doesn't _hurt._ The recipients mostly spent the extra money on nicer things for their kids & loved ones, and did not spend it on drugs or gambling. And UBI _did_ reduce intimate partner abuse, and make people happier… for about one year, before returning to baseline.)
+Also, in these major UBI trials, recipients worked a bit less. Which would be good if the extra leisure time translated to better mental health, or better child health. It didn't.
+
+(To be fair, at least UBI in America doesn't _hurt._ The recipients mostly spent the extra money on nicer things for their kids & loved ones, and did not spend it on drugs or gambling. And UBI _did_ reduce intimate partner abuse, and make people happier… for about one year, before returning to baseline. Which isn't nothing! Not being beat by your spouse for a year matters!)
 
 So… what gives? Why does UBI work in developing nations, but not America?
 
-I don't know. Maybe money is a stronger limiting factor in developing nations, but non-money stuff (habits, culture, social ties, systemic issues) are a stronger constraint in America. This is a very ad-hoc explanation.
+I don't know. Maybe money is a stronger limiting factor in developing nations, but non-money stuff (personal habits, cultural norms, social ties, systemic issues) are a stronger constraint in America. This is a very ad-hoc explanation.
 
 = = =
 
 An alternative to UBI is an **Earned Income Tax Credit (EITC)**, also known as a negative income tax. The idea is that the company pays you whatever's the market wage, but it's topped up to a livable wage through tax credits.
 
-Politically, it's [popular among conservatives](https://www.aei.org/economics/does-economic-freedom-have-a-future-in-america-a-qa-with-arthur-brooks/) because unlike UBI, the EITC provides pro-work incentives. (plus, "negative tax" and "tax rebate" _feels_ better than "welfare check". In the latter, you're getting a handout. But in the former, you're _getting your money back_. Feels better! Even though it's frikkin' identical. _It's all about the marketing, baby._)
+Politically, it's popular [among](https://waysandmeans.house.gov/2024/02/20/icymi-american-compass-op-ed-child-tax-credit-is-a-win-for-conservatives/) [conservatives](https://www.aei.org/economics/does-economic-freedom-have-a-future-in-america-a-qa-with-arthur-brooks/) because unlike UBI, the EITC provides pro-work incentives. (plus, "negative tax" and "tax rebate" _feels_ better than "welfare check". In the latter, you're getting a handout. But in the former, you're _getting your money back_. Feels better! Even though it's frikkin' identical. _It's all about the marketing, baby._)
 
 It's also popular among economists (who are the most politically diverse field in social science). According to the most recent survey of economists, 90% support expanding the EITC. ([see Table 1](https://d1wqtxts1xzle7.cloudfront.net/95174671/HBhGyFD7-libre.pdf?1669999561=&response-content-disposition=inline%3B+filename%3DConsensus_among_economists_2020_A_sharpe.pdf&Expires=1763701882&Signature=IaFfiqOrXv-Nov61st-qoOTiaE8K8~pVvirurLs3akQKaO6xxn~khOCs1ufp2jJNkbDzg7fU-aHX~XP6CFvU5pSRSrkP5SobLhbEdIf9yN-Mg~ezpdVFoAnvifuXXpH9giSaR1-OPndVSdh~xCzx0FWqWsYa4k04uKlYpOFdMdvm4LhDVnoBttyhRd~8hWGi22aBRK19xCtlEe63E3mOoJx79fv9APB~iRy4gkV9uryKSJoSl5jqEBBOohpxsK4OURp46z8OLowwzxbeK~0zG9WURDFvQxQaMidtQNs9tFEerWa~GBZSVMp~Y8nVYeqN-80PEWKJfsimBM133vXefg__&Key-Pair-Id=APKAJLOHF5GGSLRBV4ZA))
 
