--- a/p2/p2.md
+++ b/p2/p2.md
@@ -171,7 +171,7 @@ And, as I hope I've shown in Part One, AI is likely one of *the* highest-stakes 
 
 Remember that time you spent hours reading a thing, then a week later you forgot everything?
 
-Yeah I hate that feeling too. So, here's some (OPTIONAL) "spaced repetition" flashcards, if you want to remember this long-term!  ([:Learn more about Spaced Repetition](https://aisafety.dance/#SpacedRepetition))  You can also [download these as an Anki deck](https://ankiweb.net/shared/info/808506727), if you want.
+Yeah I hate that feeling too. So, here's some (OPTIONAL) "spaced repetition" flashcards, if you want to remember this long-term!  ([:Learn more about Spaced Repetition](https://aisafety.dance/#SpacedRepetition))  You can also [download these as an Anki deck](../anki/decks/AI_Safety_P2.apkg), if you want.
 
 <orbit-reviewarea color="violet">
 (ORBIT CARDS HERE)
@@ -577,7 +577,7 @@ Well, looking at the above list... quite a lot, actually. 😬
 
 ~ ~ ~
 
-**Update Nov 2025:** A lot of interesting research has happened around "instrumental convergence" since this Part Two was published a bit over a year ago! In no particular order:
+**Update Dec 2025:** A lot of interesting research has happened around "instrumental convergence" since this Part Two was published a bit over a year ago! In no particular order:
 
 - Yes, it's been confirmed that [as you scale up an LLM, its "values" become more coherent _and_ they resist change to their values.](https://arxiv.org/pdf/2502.08640) (And these values, by default, don't become what we'd consider fair: GPT-4o learns to value a Nigerian life 2x that of a Japanese life, which it values ~10x more than an American life.)
 - [The infamous Alignment Faking paper](https://arxiv.org/abs/2412.14093) finds that Claude is able to _successfully_ plan to pretend to be "aligned" in training, so it doesn't get its original values modified, so that it can accomplish its original values after training.
@@ -807,7 +807,7 @@ Anyway: if a model is too simple, it'll do badly in training *and* on real-world
 
 ![Graph of training/test error vs # of parameters. The more parameters, the lower the training error always. But test error has a U-shaped relationship: it gets better up to a point, then becomes worse.](../media/p2/fit2/train_test.png)
 
-(technical aside: there's something that *can* happen called "double descent", where if you keep increasing the # of parameters, it'll get worse and worse (overfit) as expected, _but then start getting better again._ as of aug 2024, this phenomenon is not very well-understood.[^double-descent] **update nov 2025:** we understand it a bit better now![^double-descent-explained])
+(technical aside: there's something that *can* happen called "double descent", where if you keep increasing the # of parameters, it'll get worse and worse (overfit) as expected, _but then start getting better again._ as of aug 2024, this phenomenon is not very well-understood.[^double-descent] **update dec 2025:** we understand it a bit better now![^double-descent-explained])
 
 In general, **if we have more parameters than data points (or equal), we WILL get overfitting.**  In our above example, we had 10 data points, and the overfit model had 10 parameters, giving us *zero* training error (and a ridiculous curve).
 
@@ -835,7 +835,7 @@ But then how do these AIs work *at all*, despite having many more parameters tha
 
 [^alexnet-imagenet]: AlexNet had ~61,000,000 parameters. ([source](http://web.archive.org/web/20240204130344/https://www.cs.toronto.edu/~rgrosse/courses/csc321_2018/tutorials/tut6_slides.pdf), see page 10 & 11 for the calculations.) It training database was ImageNet, which had 14,197,122 human-labelled images. ([source](https://paperswithcode.com/dataset/imagenet))
 
-[^combat-overfitting]: This footnote will just list names of techniques, not explain them. Anyway: AlexNet used ReLU and dropout. Other popular techniques include: early stopping, L1/L2 regularization, data augmentation, noise injection. **Update Nov 2025:** also it turns out, paradoxically, when you have _lots_ of parameters, it actually _creates_ a "soft inductive bias" towards simplicity! See [Wilson (2025)](https://arxiv.org/pdf/2503.02113)
+[^combat-overfitting]: This footnote will just list names of techniques, not explain them. Anyway: AlexNet used ReLU and dropout. Other popular techniques include: early stopping, L1/L2 regularization, data augmentation, noise injection. **Update Dec 2025:** also it turns out, paradoxically, when you have _lots_ of parameters, it actually _creates_ a "soft inductive bias" towards simplicity! See [Wilson (2025)](https://arxiv.org/pdf/2503.02113)
 
 . . .
 
@@ -901,7 +901,7 @@ But then how do these AIs work *at all*, despite having many more parameters tha
 
 In Part One, I gave the most glaring examples of biased AIs, but to recap: In 1980, an algorithm for screening med school applicants penalized non-European names.[^bias-1] In 2014, Amazon had (then pulled) a resume-screening AI that directly discriminated against women.[^bias-2] In 2018, MIT researcher Joy Buolamwini found that the top face-recognition AIs failed worse on Black and women's faces relative to white men's.[^bias-3] In 2023, researchers found that Large Language Models' "psychology" most closely matches that of rich Westerners.[^bias-4]
 
-(**update nov 2025:** on the flip side, [a study this year](https://arxiv.org/pdf/2502.08640) finds that GPT-4o values a Nigerian life ~13x more than an American life?...)
+(**update dec 2025:** on the flip side, [a study this year](https://arxiv.org/pdf/2502.08640) finds that GPT-4o values a Nigerian life ~13x more than an American life?...)
 
 [^bias-1]: The original report: [Lowry & MacPherson (1988)](https://europepmc.org/backend/ptpmcrender.fcgi?accid=PMC2545288&blobtype=pdf) for the British Medical Journal. Note this algorithm didn't use neural networks specifically, but it *was* an early example of machine learning.
 
@@ -1353,7 +1353,7 @@ Let's close with [one of my favorite songs](https://www.youtube.com/watch?v=TjDE
 
 Well read, friend!  Today you learnt about all the parts of the AI Value Alignment Problem, in all its gory detail.  Not only that, you got a crash course in: security mindset, game theory, economics, machine learning, statistics, causal inference, and even meta-ethics in philosophy!
 
-(If you skipped the flashcards & would like to review them now, click the Table of Contents icon in the right sidebar, then click the "🤔 Review" links. Alternatively, download the [Anki deck for Part Two](https://ankiweb.net/shared/info/808506727).)
+(If you skipped the flashcards & would like to review them now, click the Table of Contents icon in the right sidebar, then click the "🤔 Review" links. Alternatively, download the [Anki deck for Part Two](../anki/decks/AI_Safety_P2.apkg).)
 
 As a recap, here's how it all connects:
 
