--- a/p2/p2.md
+++ b/p2/p2.md
@@ -1196,7 +1196,9 @@ But even if so, this won't ensure that an advanced AI would discover objective m
 
 After Newton, all the philosophers got physics-envy. Like how Newton found universal physical laws grounded in math, philosophers sought to find universal moral laws grounded in rationality. If true, then a super-intelligent AI could re-discover morality!
 
-Here's a diagram capturing the Top Three schools of thought in modern meta-ethics, *and* a causal diagram of how they relate to each other!
+Here's a diagram capturing the Top Three schools of thought in modern ethics[^ethics-difference], *and* a causal diagram of how they relate to each other!
+
+[^ethics-difference]: update dec 2025: I originally wrote "meta-ethics" here, but I was mixing up _meta_-ethics with _normative_ ethics. There's 3 branches of the study of ethics: 1) _Applied_ Ethics (what should we do about a specific issue, e.g. euthanasia), 2) _Normative_ Ethics, a general theory of what we should do (that's what the below figure describes), and 3) _Meta_ Ethics, the nature of "we should" statements themselves, e.g. are they objectively true, are they emotional blurts, etc. (Hat tip to a reader for writing in to correct the difference!)
 
 ![Comic of Ham the Human throwing a brick at Sheriff Meowdy's head, Krazy Kat-style. Captioned: Virtue Ethics focuses on character, Deontology focuses on actions, Consequentialism focuses on results of your actions. There's a causal diagram, too: character causes actions causes results of your actions.](../media/p2/ethics/ethics.png)
 
