--- a/p3/p3.md
+++ b/p3/p3.md
@@ -627,7 +627,7 @@ And more importantly, the "learn our values" approach (instead of "try to hard-c
 
 ![Diagram of above idea. Two-axis graph: Alignment vs Capabilities, where the diagonal dotted line is the boundary between Alignment > Capabilities and Alignment < Capabilities. By tying Alignment TO Capabilities, we stay above the safe dotted line.](../media/p3/learn/rocket.png)
 
-(Though: don't get too comfortable. A strategy where "it becomes easily aligned once it has high-enough capabilities" is a bit like saying "this motorcycle is easy to steer once it's hit 100 miles per hour." I mean, that's _good_, but it's still not enough. Hence, the many other proposed solutions on this page. More swiss cheese.)
+(Though: don't get too comfortable. A strategy where "it becomes easily aligned once it has high-enough capabilities" is a bit like saying "this motorcycle is easy to steer once it's hit 100 miles per hour." I mean, that's _better_, but what about lower speeds, lower capabilities? Hence, the many other proposed solutions on this page. More swiss cheese.)
 
 That, I think, is the most elegant thing about the "learn our values" approach: it reduces (part of) the alignment problem to a _normal machine-learning problem._ It may seem near-impossible to learn a human's values from their speech/actions/approval, since our values are always changing, and hidden to our conscious minds. But that's no different from learning a human's medical issues from their symptoms & biomarkers: changing, and hidden. It's a _hard_ problem, but it's a normal problem.
 
