--- a/p3/p3.md
+++ b/p3/p3.md
@@ -14,7 +14,7 @@ Then: although no *one* solution covers the whole space, *the entire problem spa
 
 ![Same outline, but entirely overlapped by small colorful circles, each one representing a different solution](../media/p3/intro/solutions.png)
 
-**We don't need One Perfect Solution; we can stack several imperfect solutions!** This is similar to the Swiss Cheese Model in Risk Analysis — each layer of defense has holes, but if you have enough layers with holes in _different_ places, risks can't go all the way through:
+**We don't need One Perfect Solution; we can stack several imperfect solutions!** This is similar to the [Swiss Cheese Model](https://en.wikipedia.org/wiki/Swiss_cheese_model) in Risk Analysis — each layer of defense has holes, but if you have enough layers with holes in _different_ places, risks can't go all the way through:
 
 ![Rays going through layers of swiss cheese, which have holes in them. The rays can easily go through the holes of _one_ layer of cheese, but not all of them.](../media/p3/intro/cheese.png)
 
@@ -186,7 +186,7 @@ Anyway, that's the *general* idea. Here's some *specific* implementations & empi
 * 👯‍♀️ **[Iterated Distillation & Amplification (IDA)](https://www.lesswrong.com/posts/vhfATmAoJcN8RqGg6/a-guide-to-iterated-amplification-and-debate)** is even safer – instead of overseeing AIs slightly-smarter than you, you oversee AIs that are *strictly weaker* than you. How, then, can this setup give you superhuman intelligence? To very loosely summarize: in IDA, you become the CEO of an organization made out of AIs trained to imitate you! Since every AI imitates you, and you're the CEO of the whole thing, the system as a whole is aligned to your values — while *also* amplifying your capabilities.
     * ([: More about IDA, and critiques of it](#IDA))
 
-Though, it's good to remain healthily critical. Here's some recent "downer" findings from monitoring Large Language Models (LLMs) like ChatGPT & Claude: if you train an LLM _too_ hard with a monitor that can read its chain-of-thought, it learns to hide its evil plans _even in its own "thoughts"_. [(Baker & Huizinga 2025)](https://arxiv.org/pdf/2503.11926). And, given naïve oversight techniques, it's actually pretty easy for an LLM to jailbreak its monitor, since LLMs have been out long enough that jailbreaks are _in_ their own training data. [(Terekhov, Panfilov & Dzenhaliou 2025)](https://arxiv.org/pdf/2510.09462)
+Though, it's good to remain healthily critical. Here's some recent "downer" findings from monitoring Large Language Models (LLMs) like ChatGPT & Claude: if you train an LLM _too_ hard with a monitor that can read its chain-of-thought, it learns to hide its evil plans _even in its own "thoughts"_. [(Baker & Huizinga 2025)](https://arxiv.org/pdf/2503.11926). And, given naïve oversight techniques, it's actually pretty easy for an LLM to jailbreak its monitor, since LLMs have been out long enough, that info about jailbreaks are _in_ their own training data. [(Terekhov, Panfilov & Dzenhaliou 2025)](https://arxiv.org/pdf/2510.09462)
 
 [^rrm-detail]: The protocol goes something like this:    
 
@@ -381,7 +381,7 @@ IMPORTANT: these are *NOT* problems with the AI being sub-optimal. These are pro
 
 But what if... we made an AI that *used Security Mindset against itself?*
 
-For now, let's assume an "optimal" AI — (again, we'll tackle sub-optimal AIs later) — that can predict the world perfectly. And since _you're_ part of the world, it can predict _how you'd react to various outcomes_ perfectly.
+For now, let's assume an "optimal capabilities" AI — (again, we'll tackle sub-optimal AIs later) — that can predict the world perfectly. And since _you're_ part of the world, it can predict _how you'd react to various outcomes_ perfectly.
 
 **Then, here's the "Future Lives" algorithm:**
 
@@ -409,7 +409,7 @@ As Stuart Russell, the co-author of the most-used textbook in AI, once put it:[^
 
 (Similar proposals include [Approval-Directed Agents](https://ai-alignment.com/model-free-decisions-6e6609f5d99e) and [Coherent Extrapolated Volition](https://intelligence.org/files/CEV.pdf). These kinds of approaches — where instead of directly telling an AI our values, we ask it to _learn & predict_ what we'd value — is called **"indirect normativity"**. It's called that because ~~academics are bad at naming things~~ "normativity" ~means "values", and "indirect" because we're showing it, not telling it.)
 
-And voilà! That's how we make an (optimal) AI apply Security Mindset to itself. **Because if one could _even in principle_ come up with a problem with an AI's action, this (optimal) AI would already predict it, and avoid doing that!**
+And voilà! That's how we make an (optimal-capabilities) AI apply Security Mindset to itself. **Because if one could _even in principle_ come up with a problem with an AI's action, this (optimal) AI would already predict it, and avoid doing that!**
 
 . . .
 
@@ -436,7 +436,7 @@ Aaaand we're done! AI Alignment, _solved!_
 
 . . .
 
-...in theory. Again, all the above _assumes an optimal AI_, which can perfectly predict all possible futures of the world, including you. This is, to understate it, infeasible.
+...in theory. Again, all the above _assumes an optimal-capabilities AI_, which can perfectly predict all possible futures of the world, including you. This is, to understate it, infeasible.
 
 Still: it's good to solve the easier ideal case first, before moving onto the harder messy real-life cases. Up next, we'll see proposals on how to get a sub-optimal, "bounded rational" AI, to implement the Future Lives approach!
 
@@ -568,6 +568,8 @@ Let's consider 3 cases, with a classic-logic Robot:
 In all 3 cases, the problem is that the AI was 100% sure what your goal was: exactly what you said or meant, *no more, no less*.
 
 **The solution: make AIs _know they don't know_ our true goals!** (Heck, *humans* don't know their own true goals.[^therapy]) AIs should think in probabilities about what we want, and be appropriately cautious.
+
+[^therapy]: See: therapy, subconscious desires, non-self-aware people, etc
 
 **Here's the algorithm:**
 
@@ -1107,7 +1109,7 @@ Okay, enough over-explaining. Time to apply SIMPLICITY / DIVERSITY / ADVERSITY t
 
 **ADVERSITY:**
 
-* <u>Adversarial Training</u>: Training AIs by making it fight against another AI.[^funny-anecdote] Remember the above panda-monkey mixup? You can make an AI more robust, by having an AI _generate_ adversarial images, then _re-training_ the original image-classifying AI with those adversarial images. This, effectively, finds & strengthens its "weak spots".[^adv-training]
+* <u>Adversarial Training</u>: Training AIs by making it fight against another AI.[^funny-anecdote] Remember the above panda-monkey mixup? You can make an AI more robust, by having an AI _generate_ adversarial images, then _re-training_ the original image-classifying AI with those adversarial images. This, effectively, finds & strengthens its "weak spots".
 * <u>Relaxed/Latent Adversarial Training</u>: Same as above, except the "attacker" AI doesn't have to give a *specific* input to trick the "defender" AI. This forces the "defender" to defend against *general* techniques, not just the specific tricks an adversary may use.[^relaxed-adv]
 * <u>Red Teams</u>: Have one team (the red team) try to break an AI system. Then, have another team (the blue team) re-design the AI system to defend against that. Repeat until satisfied.[^red-team] (Your teams could be pure-human, or human-AI mix.)
 * <u>Best Worst-Case Performance</u>: Instead of training an AI to do well *in the average case*, you can make it far more robust, by training it to do well *even in the worst-case*. (but also apply Simplicity/"regularization", so it doesn't optimize for the worst-case in paranoid ways.)[^dro-src]
@@ -1116,7 +1118,7 @@ Okay, enough over-explaining. Time to apply SIMPLICITY / DIVERSITY / ADVERSITY t
 
 [^funny-anecdote]: Fun anecdote: I first learnt about [Generative Adversarial Networks](https://en.wikipedia.org/wiki/Generative_adversarial_network) a decade ago in a Google Meet call (then Google Hangouts). I raised my hand to ask, "wait, we're generating images by… training one intelligence to deceive another intelligence?" And we all _laughed_. Ohhhhhh how we all _laughed._ Ha ha. Ha ha ha. Ha ha HA ha ha. Haaaaaaaaaaa.
 
-[^adv-training]: For example: an attacker LLM tries to create sneaky prompts that "jailbreak" a defender LLM into turning evil. In traditional Adversarial Training, the defender may only learn to protect against specific jailbreaks. In Relaxed/Latent Adversarial Training, the defender LLM may learn more general protective lessons, like, "[be suspicious of weirdly-formatted instructions](https://github.com/elder-plinius/L1B3RT4S/blob/main/ANTHROPIC.mkd)".
+[^relaxed-adv]: For example: an attacker LLM tries to create sneaky prompts that "jailbreak" a defender LLM into turning evil. In traditional Adversarial Training, the defender may only learn to protect against specific jailbreaks. In Relaxed/Latent Adversarial Training, the defender LLM may learn more general protective lessons, like, "[be suspicious of weirdly-formatted instructions](https://github.com/elder-plinius/L1B3RT4S/blob/main/ANTHROPIC.mkd)".
     
     Here's [an empirical paper](https://arxiv.org/pdf/2403.05030) showing a proof-of-concept for relaxed/latent adversarial training: “In this work, we utilize latent adversarial training (LAT) to defend against vulnerabilities _without leveraging knowledge of what they are or using inputs that elicit them._ [...] Specifically, we use LAT to remove backdoors and defend against held-out classes of adversarial attacks.” (emphasis added)
 
