--- a/p3/p3.md
+++ b/p3/p3.md
@@ -123,7 +123,7 @@ Wait, isn't a single chain of oversight fragile? As in, if _one_ of the Meowdy's
 ![Parallel braided chains of overseers. The chance of failure shrinks exponentially, as you add more chains.](../media/p3/so/meowdy_robust.png)
 (👉 [: optional - click to see the math for the above diagram](#RobustChainMath))
 
-This way, if any _one_ overseer at Level N gets corrupted, there'll still be two others checking the bots at Level N+1. And the overseers at Level N-1 can catch & fix the corrupted overseer. Note: _it's important the overseers are independent from each other_, so their failures are not correlated. At the moment, AI failures are _very_ correlated. We'll learn more about how to create Robustness, in a later section.
+This way, if any _one_ overseer at Level N gets corrupted, there'll still be two others checking the bots at Level N+1. And the overseers at Level N-1 can catch & fix the corrupted overseer. Note: _it's important the overseers are as independent as possible_, so their failures have a low correlation. At the moment, AI failures are _very_ correlated. We'll learn more, in a later section, about how to create Robustness in AI.
 
 Anyway, in sum, the core insight of scalable oversight is this meme:
 
@@ -1325,7 +1325,7 @@ Modern AI: Flexible, but not robust.
 
 **As of writing (Dec 2025), we do not know how to make an AI that do both: _flexibly_ discovering & using _robust models_.** To be able to switch between vibes & gears _at will, fluently_. The deduction of logic + the induction of intuition = the _abduction_ of science.[^abduction] It's not just interpolating & extrapolating data, it's _hyper_-polating data: stepping out of the data's flatland, into a new dimension.[^hyperpolation]
 
-Is this vague? Yes. Ironically, I only have a vibe-based understanding of gears. I don't have a rigorous mental model of _rigorous mental models_.
+Is that a bunch o' vague jargon? Yes. Ironically, I only have a vibe-based understanding of gears. I don't have a rigorous mental model of _rigorous mental models_. I'm not sure anyone does. If we did, we'd probably have artificial general intelligence (AGI) by now.
 
 [^induction]: [Inductive reasoning](https://en.wikipedia.org/wiki/Inductive_reasoning) is stuff like "the Sun has risen every day for the last 10,000 days I've been alive, therefore the Sun will almost definitely rise again tomorrow". It's not _technically_ a logical deduction — it's _logically_ possible the Sun could vanish tomorrow — but, statistically, yeah it's probably fine.
 
@@ -1362,7 +1362,7 @@ So the problem's not the _length_ of the reasoning, it's _how common_ is the rea
 
 Where "probability" ~= "how common is it in the training data".
 
-Mystery solved: that's why LLMs rock at human conversation, but suck at rule-discovery mini-games. And long tasks are "less probable" than short tasks, because homework problems & textbook examples are almost always a page or two, not dozens of pages. (This, I suspect, is why Claude sucked at running a vending machine,[^fail-vending] even though there's lots of writing on how to run a business: when business textbooks give examples, they list a few transactions, not _thousands_.[^synthetic-data])
+Mystery (partly) solved: that's why LLMs rock at human conversation, but suck at rule-discovery mini-games. And long tasks are "less probable" than short tasks, because homework problems & textbook examples are almost always a page or two, not dozens of pages. (This, I suspect, is why Claude sucked at running a vending machine,[^fail-vending] even though there's lots of writing on how to run a business: when business textbooks give examples, they list a few transactions, not _thousands_.[^synthetic-data])
 
 [^synthetic-data]: Maybe this can be solved by writing a _normal_ program, that then writes you "synthetic data" for a business operating successfully over 365 days, that you can fine-tune an LLM on? I dunno, this still feels like the special pleading of "yes I can add 7 digits & bomb at 8, but if you give me more training I can do it!" If you pass 7 but bomb 8, there's something fundamentally wrong that "more scale" don't fix.
 
@@ -1382,7 +1382,7 @@ Common task → LLMs get exponentially better over time
 
 Uncommon tasks → <img src="../media/p3/gears/cheems.png" alt="crying meme dog" class="inline-icon">
 
-To be clear, a mere "common task auto-completer" can _still_ have huge impact, for better _and_ worse. In blind tests, AI therapists are preferred over human therapists, by both human clients _and human therapists themselves_.[^win-therapy] AI Therapy could finally make mental healthcare accessible to all, and/or, make humans emotionally dependent on corporate-owned bots. And I expect _my_ two main jobs, "science communicator" and "web developer", to be mostly automated away in the next 5 years. (This is why, in 2026, I want to pivot to becoming a researcher. Because the day _science_ itself is automated… well… either way that shakes out, I won't have to figure out how to pay rent anymore.)
+To be clear, a mere "common task auto-completer" can _still_ have huge impact, for better _and_ worse. In blind tests, AI therapists are preferred over human therapists, by both human clients _and human therapists themselves_.[^win-therapy] AI Therapy could finally make mental healthcare accessible to all, and/or, make humans emotionally dependent on corporate-owned bots. And I expect _my_ two main jobs, "science communicator" and "web developer", to be mostly automated away in the next 5 years. (This is why, in 2026, I want to pivot to becoming a researcher. Because the day _science itself_ is automated… well… either way that shakes out, I won't have to figure out how to pay rent anymore.)
 
 . . .
 
